--- a/TKPhoenix/Test/test page.html
+++ b/TKPhoenix/Test/test page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="testStyle.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>T.K. Phoenix</title>
 </head>
@@ -16,7 +16,7 @@
             <h1>Welcome to Ty Kali</h1>
         </header>
     <div class="current-word" id="current-word">This is the word location</div>
-    <div class="full-piece" ><h1 style="background-image: url('./Images/superbee.png')"/><p class="piece" id="piece"></p>
+    <div class="piece" id="piece"><img src="../Images/superbee.png" height="55px" width="55px">
     </div>
             <!-- <p>Choose your game mode:</p>
             <form onsubmit= buttonClick()>
@@ -47,6 +47,6 @@
   <div><a href="https://www.freepik.com/vectors/background">Backgrounds created by
     upklyak - www.freepik.com</a></div>
 </div>
-<script defer src='main.js'></script>
+<script defer src='mainTest.js'></script>
 </body>
 </html>  
