small efficiency change

--- a/TKPhoenix/index.html
+++ b/TKPhoenix/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src='main.js' defer></script>
     <title>T.K. Phoenix</title>
 </head>
 <body>
@@ -47,6 +48,6 @@
   <div><a href="https://www.freepik.com/vectors/background">Backgrounds created by
     upklyak - www.freepik.com</a></div>
 </div>
-<script defer src='main.js'></script>
+
 </body>
 </html>  
